# logger.h

./: CMakeLists.txt  LICENSE  README.md  proj.bat  proj.sh  project.cfg  sound.db  spmake.bat
cmake/: SetGlobalDefines.cmake
include/: logger.h
include/logger/: logger.h
include/logh/: logger.h
src/: main.cc
tests/: phony_test.cc
